-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Cluster Scalability
-
Fully Compatible
-
ALL
-
ClusterScalability 6Jul-20Jul
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The sharding write router benchmark is currently failing internal assertions silently since benchmarks aren't marked as failed for this type of failure. It looks like this benchmark was working in 8.3 but since the changes to the LocalReshardingOperationsRegistry is no longer passing its assertions.