SERVER-129870 Update sharding write router benchmark to handle LocalReshardingOperationsRegistry (#57646)

GitOrigin-RevId: 4d2214ecbec7165c6a54353e34eb19fc4d8ead57